1.10.0 AVANGUARD